# StockfishExample

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/loloof64/android/stockfishexample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/loloof64/android/stockfishexample/: MainActivity.kt
app/src/main/java/com/loloof64/android/stockfishexample/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/loloof64/android/stockfishexample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
stockfishlib/: .gitignore  README.md  build.gradle
stockfishlib/src/androidTest/java/com/loloof64/android/stockfishlib/: ExampleInstrumentedTest.kt
stockfishlib/src/main/: AndroidManifest.xml
stockfishlib/src/main/cpp/: CMakeLists.txt
stockfishlib/src/main/cpp/bridge/: stockfish.cpp
stockfishlib/src/main/java/com/loloof64/android/stockfishlib/: NativeLib.java  NativeLib.kt
stockfishlib/src/test/java/com/loloof64/android/stockfishlib/: ExampleUnitTest.kt
